# weak-implementation

./: .env  .gitignore  CHANGELOG.md  main.py  mosek.lic  pyproject.toml  pytest.ini
Expired/: run_downstream_pipe.py
Expired/gen_data/: gen_domainnet.py
Expired/read_cfg/: run_exp.cfg
bfuai/: run_bfuai.py  write_wmrc_settings.py
examples/: index.rst  run_downstream_pipe.py  show_example.py
examples/gen_data/: gen_openml.py
examples/read_cfg/: run_exp.cfg
files/inputs/configs/: test_config.cfg  wmrc_config.cfg
notebooks/: make_data.ipynb  make_data.py
rewrite_adverse/: go_hyperlm.py  utils.py  wrench
rewrite_adverse/examples/: go_confection.py
skweak/: __init__.py  constant.py  logging.py
skweak/core/: __init__.py  base.py  metrics.py  pipeline.py  registry.py
skweak/dataset/: __init__.py  base_data.py  graph_data.py  sequence_data.py  simple_data.py  tabular_data.py  test_data.py  text_data.py
skweak/endmodel/: __init__.py  linear.py  neural.py
skweak/evaluation/: __init__.py  cross_validation.py  metrics.py
skweak/labelmodel/: __init__.py  mv.py  snorkel.py  test_labelmodel.py
skweak/pipelines/: __init__.py  downstream.py  ssl_run.py
skweak/transform/: __init__.py  feature_transform.py  label_transform.py
skweak/utils/: __init__.py  data_utils.py  io_utils.py  preprocess.py  sk_utils.py  torch_utils.py  validation.py
tests/: test_adversarial.py
weakly/: __init__.py
weakly/cli/: main.py
weakly/config/: config_manager.py  config_schema.py
weakly/core/: __init__.py  experiment.py  logging.py  output_manager.py  runner.py
weakly/data/: base_loader.py  matlab_loader.py
weakly/experiments/: adversarial.py
weakly/models/: base_model.py  wmrc_model.py
weakly/search/: grid_search.py
weakly/utils/: metrics.py  plotting.py
wrench/: basemodel.py
wrench/classification/: astra.py  denoise.py  implyloss.py  weasel.py
wrench/dataset/: basedataset.py  dataset.py  graphdataset.py  seqdataset.py  utils.py
wrench/endmodel/: bert_model.py  cosine.py  end_model.py  linear_model.py  neural_model.py
wrench/endmodel/loss/: logit_adjustment.py
wrench/labelmodel/: amcl_cc.py  dawid_skene.py  ebcc.py  hyper_label_model.py  snorkel.py  wmrc.py
wrench/metalearning/: learn_to_reweight.py  meta_weight_net.py
wrench/semisupervisedlearning/: meanteacher.py
wrench/seq_endmodel/: bert_crf_model.py  lstm_crf_model.py
wrench/seq_labelmodel/: seq_wrapper.py
wrench/seqtagging/: connet.py
wrench/synthetic/: lf_generator.py  syntheticdataset.py
