[project]
name = "dltorch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aim>=3.29.1",
    "backpack-for-pytorch>=1.7.1",
    "composer==0.31.0",
    "confection>=0.1.5",
    "cvxpy>=1.6.6",
    "datclass>=0.2.28",
    "debugpy>=1.8.14",
    "flyingsquid>=0.0.0a0",
    "hyperlm>=0.0.5",
    "matplotlib>=3.10.3",
    "nltk>=3.9.1",
    "numba>=0.61.2",
    "numbskull==0.1.1",
    "numpy==2.2.6",
    "optuna>=4.4.0",
    "pgmpy==0.1.26",
    "pip>=25.1.1",
    "sentence-transformers>=4.1.0",
    "seqeval>=1.2.2",
    "snorkel>=0.10.0",
    "snorkel-metal>=0.5.0",
    "spacy-alignments>=0.9.2",
    "tensorboardx>=2.6.4",
    "torchvision==0.22.0",
    "transformers>=4.52.4",
    "wandb>=0.20.1",
]
