[project]
name = "weaklearn"
dynamic = ["version"]
description = "A Python package for weak supervision learning compatible with scikit-learn and Pytorch."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "confection>=0.1.5",
    "cvxpy>=1.6.6",
    "datasets>=3.6.0",
    "flyingsquid>=0.0.0a0",
    "hyperlm>=0.0.5",
    "loguru>=0.7.3",
    "matplotlib>=3.10.3",
    "nltk>=3.9.1",
    "numba>=0.61.2",
    "numbskull>=0.1.1",
    "pgmpy>=1.0.0",
    "pydantic>=2.11.7",
    "pytokenizations>=0.8.4",
    "scikit-learn>=1.7.0",
    "sentence-transformers>=5.0.0",
    "seqeval>=1.2.2",
    "skorch>=1.1.0",
    "snorkel>=0.10.0",
    "snorkel-metal>=0.5.0",
    "strongtyping>=3.11.4",
    "tensorboardx>=2.6.4",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "transformers>=4.53.1",
    "universal-pathlib>=0.2.6",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jedi-language-server>=0.45.1",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.4",
    "myst-parser>=4.0.1",
    "notebook>=7.4.3",
    "numpydoc>=1.9.0",
    "openml>=0.15.1",
    "pip>=25.1.1",
    "pytest>=8.4.1",
    "python-lsp-server[all]>=1.12.2",
    "ruff>=0.12.1",
    "sphinx>=8.2.3",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-design>=0.6.1",
    "sphinx-gallery>=0.19.0",
    "sphinx-math-dollar>=1.2.1",
    "sphinx-rtd-theme>=3.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "regex"
path = "weaklearn/__init__.py"
pattern = "^__version__ = ['\"](?P<version>[^'\"]+)['\"]"

[tool.codespell]
skip = [
    "./.git",
    "./doc/_build",
    "./doc/auto_examples",
    "./doc/modules/generated"
]


ignore_messages = "^.*(Unknown target name|Undefined substitution referenced)[^`]*$"
